# SmartRefresh

./: .gitignore  Dockerfile.build  LICENSE  README.md  build.sh  docker-build.sh  install.sh  main.py  package.json  plugin.json
backend/: Cargo.toml
backend/.cargo/: config.toml
backend/proptest-regressions/: ipc_server.txt
backend/src/: battery.rs  config.rs  core_logic.rs  display_control.rs  error.rs  fps_monitor.rs  ipc_server.rs  logging.rs  main.rs  metrics.rs  monitor_detect.rs  profiles.rs
frontend/: package-lock.json  package.json  rollup.config.js  tsconfig.json
frontend/src/: api.ts  index.tsx
frontend/src/components/: DebugView.tsx  EnableToggle.tsx  RefreshRangeSlider.tsx  SensitivitySlider.tsx
