[package]
name = "smart-refresh-daemon"
version = "0.1.0"
edition = "2021"
description = "SmartRefresh daemon for dynamic refresh rate switching on Steam Deck"
authors = ["SmartRefresh Team"]

[dependencies]
# Async runtime
tokio = { version = "1.35", features = ["full", "rt-multi-thread", "sync", "time", "process", "signal", "net", "io-util", "macros"] }

# System interfaces
libc = "0.2"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Error handling
thiserror = "1.0"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["json", "env-filter", "time"] }
time = { version = "0.3", features = ["formatting"] }
tracing-appender = "0.2"

[dev-dependencies]
# Property-based testing
proptest = "1.4"
# Temporary directories for testing
tempfile = "3.10"

[profile.release]
strip = true
lto = true
opt-level = "z"
